--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">MarsRover</string>
     <string name="label_sol">sol %d</string>
+    <string name="action_calendar">Calendar</string>
+    <string name="action_select_rover">Select rover</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="rover_spirit">Spirit</string>
+    <string name="landing_date">Landing date %s</string>
+    <string name="last_date">Last date %s</string>
+    <string name="rover_opportunity">Opportunity</string>
+    <string name="rover_curiosity">Curiosity</string>
+    <string name="select_rover_header">Select Rover</string>
 </resources>
